spade-tests/src/snapshots/spade_tests__auto_traits__tuples_alone_are_not_copy.snap
---
source: spade-tests/src/auto_traits.rs
---
struct A<T> {
    x: T
}

fn needs_copy<T: Copy>(x: T) {}

fn test1(x: (inv bool, bool)) {
    needs_copy(x)
}


error: Argument type mismatch. Expected core::marker::Copy got (inv bool, bool)
  ┌─ testinput:8:16
  │
5 │ fn needs_copy<T: Copy>(x: T) {}
  │                  ---- Required because of the trait bound specified here
  ·
8 │     needs_copy(x)
  │                ^ (inv bool, bool) does not implement core::marker::Copy
