spade-tests/src/snapshots/spade_tests__auto_traits__tuples_alone_are_not_data.snap
---
source: spade-tests/src/auto_traits.rs
---
struct A<T> {
    x: T
}

fn needs_data<T: Data>(x: T) {}

fn test1(x: (clock, bool)) {
    needs_data(x)
}


error: Argument type mismatch. Expected core::marker::Data got (clock, bool)
  ┌─ testinput:8:16
  │
5 │ fn needs_data<T: Data>(x: T) {}
  │                  ---- Required because of the trait bound specified here
  ·
8 │     needs_data(x)
  │                ^ (clock, bool) does not implement core::marker::Data
